# SVN-temp

./: CMakeLists.txt
Dev branch/MyProgram/Dir1/: CMakeLists.txt
Dev branch/MyProgram/Dir2/: CMakeLists.txt  main.cpp
DevOps branch/MyProgram/: CMakeLists.txt
DevOps branch/MyProgram/Dir1/: CMakeLists.txt
test/: CMakeLists.txt
